--- a/AucklandTransportMetro.API/AucklandTransportMetro.API.csproj
+++ b/AucklandTransportMetro.API/AucklandTransportMetro.API.csproj
@@ -12,6 +12,9 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
+    <PackageReference Include="System.Interactive.Async" Version="3.1.1" />
+    <PackageReference Include="System.Reactive.Core" Version="3.1.1" />
+    <PackageReference Include="System.Reactive.Providers" Version="3.1.1" />
   </ItemGroup>
 
 </Project>
